--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,7 +11,8 @@
 
 # dependencies
 /node_modules
-ssl
+/StudentAssets
+/ssl
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
